--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,13 +47,26 @@ build_backend:
 test_backend:
   stage: test
   image: elixir:1.17-alpine
-  services: []
+  services:
+    - postgres:15-alpine
+  variables:
+    POSTGRES_DB: signin_project_test
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
+    DB_HOST: postgres
+    DB_USER: postgres
+    DB_PASSWORD: postgres
+    DB_NAME: signin_project_test
+    MIX_ENV: test
   script:
+    - apk add --no-cache build-base git postgresql-client
     - cd backend
     - mix local.hex --force
     - mix local.rebar --force
     - mix deps.get
-    - MIX_ENV=test mix test
+    - mix ecto.create
+    - mix ecto.migrate
+    - mix test
   only:
     - branches
 
