fix: add postgres trust auth and readiness check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,11 +48,13 @@ test_backend:
   stage: test
   image: elixir:1.17-alpine
   services:
-    - postgres:15-alpine
+    - name: postgres:15-alpine
+      alias: postgres
   variables:
     POSTGRES_DB: signin_project_test
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: postgres
+    POSTGRES_HOST_AUTH_METHOD: trust
     DB_HOST: postgres
     DB_USER: postgres
     DB_PASSWORD: postgres
@@ -60,6 +62,8 @@ test_backend:
     MIX_ENV: test
   script:
     - apk add --no-cache build-base git postgresql-client
+    - echo "Waiting for postgres to be ready..."
+    - until pg_isready -h postgres -U postgres; do sleep 1; done
     - cd backend
     - mix local.hex --force
     - mix local.rebar --force
