--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,21 +5,21 @@ services:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-signin_project_prod}
     volumes:
       - db_data:/var/lib/postgresql/data
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: ${BACKEND_IMAGE:-registry.gitlab.com/cello-miao/devops/backend:latest}
     restart: always
-    env_file:
-      - .env.prod
     environment:
-      DATABASE_URL: "postgres://$${POSTGRES_USER}:$${POSTGRES_PASSWORD}@db:5432/$${POSTGRES_DB}"
+      DB_HOST: db
+      DB_USER: ${POSTGRES_USER:-postgres}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      DB_NAME: ${POSTGRES_DB:-signin_project_prod}
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       MIX_ENV: prod
     depends_on:
       - db
@@ -27,12 +27,8 @@ services:
       - '4000'
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: ${FRONTEND_IMAGE:-registry.gitlab.com/cello-miao/devops/frontend:latest}
     restart: always
-    env_file:
-      - .env.prod
     expose:
       - '80'
     depends_on:
