--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,8 +120,8 @@ deploy_prod:
   image: docker:27
   script:
     - echo "Deploying to production..."
-    - echo "$CI_REGISTRY_PASSWORD" | docker login
-      -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER"
+      --password-stdin $CI_REGISTRY
     - apk add --no-cache docker-compose
     - export FRONTEND_IMAGE="$CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHA"
     - export BACKEND_IMAGE="$CI_REGISTRY_IMAGE/backend:$CI_COMMIT_SHA"
@@ -132,8 +132,8 @@ deploy_prod:
     - docker compose -f docker-compose.prod.yml exec -T backend
       mix ecto.migrate || echo "Migration failed or not needed"
     - echo "Deployment completed successfully!"
-    - echo "Frontend: http://localhost (port 80)"
-    - echo "Backend: http://localhost:4000"
+    - echo "Frontend at http://localhost (port 80)"
+    - echo "Backend at http://localhost:4000"
   environment:
     name: production
     url: http://localhost
