--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,7 +121,13 @@ deploy_prod:
   before_script:
     - apk add --no-cache openssh-client
     - mkdir -p ~/.ssh
-    - printf "%s\n" "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    # 支持两种格式：多行（默认）或单行（用|分隔）
+    - |
+      if echo "$SSH_PRIVATE_KEY" | grep -q '|'; then
+        echo "$SSH_PRIVATE_KEY" | tr '|' '\n' > ~/.ssh/id_rsa
+      else
+        printf "%s\n" "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+      fi
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts 2>/dev/null || true
   script:
