feat: simplify SSH key handling with Base64 encoding
- Replace complex multi-format SSH key handling with simple Base64 decode
- Reduce code from 6 lines to 1 line (83% reduction)
- Use standard Base64 encoding for better reliability
- Add comprehensive BASE64_SSH_GUIDE.md documentation
- Add test-ssh-key.sh automation script for testing
- Update variable name from SSH_PRIVATE_KEY to SSH_KEY_BASE64

Benefits:
- Simpler and more maintainable code
- Standard encoding method (base64)
- Better GitLab Variables UI compatibility
- Single-line format easier to handle
- Automatic preservation of newlines and special characters

Breaking Change:
- GitLab CI/CD variable name changed to SSH_KEY_BASE64
- Requires Base64 encoding of private key before adding to GitLab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,13 +121,7 @@ deploy_prod:
   before_script:
     - apk add --no-cache openssh-client
     - mkdir -p ~/.ssh
-    # 支持两种格式：多行（默认）或单行（用|分隔）
-    - |
-      if echo "$SSH_PRIVATE_KEY" | grep -q '|'; then
-        echo "$SSH_PRIVATE_KEY" | tr '|' '\n' > ~/.ssh/id_rsa
-      else
-        printf "%s\n" "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-      fi
+    - echo "$SSH_KEY_BASE64" | base64 -d > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts 2>/dev/null || true
   script:
