fix: correct SSH key filename typo and ensure app directory exists
- Fix critical typo: id_rsax -> id_rsa (would cause SSH auth failure)
- Add mkdir -p ~/app before scp to ensure target directory exists
- Improve deployment reliability

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,6 +126,7 @@ deploy_prod:
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts 2>/dev/null || true
   script:
     - echo "开始部署到 EC2..."
+    - ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "mkdir -p ~/app"
     # 1. 上传 docker-compose 文件
     - echo "步骤1 上传 docker-compose.prod.yml..."
     - scp -o StrictHostKeyChecking=no docker-compose.prod.yml
