fix: upload nginx.conf to EC2 for proxy service
- Add nginx.conf to scp upload step
- Fix proxy service mount error (nginx.conf was missing on EC2)
- Update step description to 'upload config files'

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,9 +127,9 @@ deploy_prod:
   script:
     - echo "开始部署到 EC2..."
     - ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "mkdir -p ~/app"
-    # 1. 上传 docker-compose 文件
-    - echo "步骤1 上传 docker-compose.prod.yml..."
-    - scp -o StrictHostKeyChecking=no docker-compose.prod.yml
+    # 1. 上传配置文件
+    - echo "步骤1 上传配置文件..."
+    - scp -o StrictHostKeyChecking=no docker-compose.prod.yml nginx.conf
       $EC2_USER@$EC2_HOST:~/app/
     # 2. 配置环境变量
     - echo "步骤2 配置环境变量..."
