fix: update backend Dockerfile to use alpine:latest for OpenSSL compatibility
- Change production stage from alpine:3.18 to alpine:latest
- Add libcrypto3 package for OpenSSL 3 support
- Fix crypto NIF library symbol not found error (EVP_MD_CTX_get_size_ex)
- Ensure build and runtime Alpine versions are compatible

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,14 +28,14 @@ RUN mix compile
 # Build release
 RUN mix release
 
-# Production stage
-FROM alpine:3.18
+# Production stage - use same alpine version as builder
+FROM alpine:latest
 
 # Use Tsinghua mirror for faster package downloads (China)
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
 
-# Install runtime dependencies
-RUN apk add --no-cache openssl ncurses-libs libstdc++ libgcc
+# Install runtime dependencies (including openssl3)
+RUN apk add --no-cache openssl ncurses-libs libstdc++ libgcc libcrypto3
 
 WORKDIR /app
 
