fix: pass SECRET_KEY_BASE to docker compose in deploy step
- Add SECRET_KEY_BASE environment variable export in deploy_prod job
- Fix backend container restart loop due to missing SECRET_KEY_BASE
- Backend now receives the required secret key for production

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,7 @@ deploy_prod:
       export BACKEND_IMAGE=$CI_REGISTRY_IMAGE/backend:$CI_COMMIT_SHA &&
       export DB_PASSWORD=$DB_PASSWORD &&
       export POSTGRES_PASSWORD=$DB_PASSWORD &&
+      export SECRET_KEY_BASE=$SECRET_KEY_BASE &&
       docker compose -f docker-compose.prod.yml up -d"
     # 6. 等待服务启动
     - echo "步骤6 等待服务启动..."
