--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,13 +15,13 @@ services:
     image: ${BACKEND_IMAGE:-registry.gitlab.com/cello-miao/devops/backend:latest}
     restart: always
     environment:
-      PHX_SERVER: "true"
-      DB_HOST: db
-      DB_USER: ${POSTGRES_USER:-postgres}
-      DB_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      DB_NAME: ${POSTGRES_DB:-signin_project_prod}
-      SECRET_KEY_BASE: ${SECRET_KEY_BASE:-}
-      MIX_ENV: prod
+      PHX_SERVER: ${PHX_SERVER:-true}
+      DB_HOST: ${DB_HOST:-db}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      DB_NAME: ${DB_NAME:-signin_project_prod}
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
+      MIX_ENV: ${MIX_ENV:-prod}
     depends_on:
       - db
     expose:
